--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="navbar">
             <ul class="nav-sec nav-left">
                 <li><a href="#"></a>Home</li>
-                <li><a href="about.html"></a>About</li>
+                <li><a href="donate.html"></a>About</li>
             </ul>
 
             <div class="logo">
