--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="banner" id="home">
         <div class="navbar">
             <ul class="nav-sec nav-left">
-                <li><a href="#"></a>Home</li>
+                <li><a href="index.html"></a>Home</li>
                 <li><a href="about.html"></a>About</li>
             </ul>
 
