--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <ul class="nav-sec nav-right">
-                <li><a href="donate.html"></a>Contact</li>
+                <li><a href="contact.html"></a>Contact</li>
                 <li><a href="donate.html"></a>Donate</li>
             </ul>
         </div>
