removing target and fixing button and responsiveness

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="elecam">
         <h1>EleCam</h1>
         <p>We use a system of solar-powered cameras to locate and monitor the elephants and to offer you, our friends and supporters, frequent glimpses of the elephants we are so fortunate to have in our care.</p>
-        <a href="https://www.elephants.com/elecam" target="_blank" class="watch-btn">Watch Now</a>
+        <a href="https://www.elephants.com/elecam" class="watch-btn">Watch Now</a>
 
     </div>
 </div>
