--- a/donate.html
+++ b/donate.html
@@ -59,19 +59,19 @@
                         <form class="donate-form" action="/" method="GET">
                             <div>
                                 <label for="credit-card">Credit Card Number</label>
-                                <input type="tel" id="credit-card" name="credit-card" maxlength="16" pattern="[0-9]{4} [0-9]{4} [0-9]{4} [0-9]{4}" placeholder="0000 0000 0000 0000" > 
+                                <input type="tel" id="credit-card" name="credit-card" placeholder="0000 0000 0000 0000" > 
                                 <span id="credit-card-error" class="error-message"></span>
                             </div>
 
                             <div>
                                 <label for="expiration">Expiration</label>
-                                <input type="tel" id="expiration" name="expiration" maxlength="5" placeholder="MM/YY">
+                                <input type="text" id="expiration" name="expiration" placeholder="MM/YY">
                                 <span id="expiration-error" class="error-message"></span>
                             </div>
                             
                             <div>
                                 <label for="security-code">Security Code</label>
-                                <input type="tel" id="security-code" name="security-code" maxlength="3" placeholder="CVV">
+                                <input type="text" id="security-code" name="security-code" placeholder="CVV">
                                 <span id="security-code-error" class="error-message"></span>
                             </div>
 
