--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
                                 We will respond as soon as possible.
                             </p>
         
-                            <form  id="contact-form" action="/" method="GET">
+                            <form  id="contact-form" action="/" method="POST">
                                 <div>
                                     <label for="contact-full-name">Full Name</label>
                                     <input type="text" id="contact-full-name" name="contact-full-name">
