--- a/donate.html
+++ b/donate.html
@@ -33,7 +33,7 @@
                     <div class="donor-info">
                         <h4 class="content-name">Your Information</h4>
 
-                        <form class="donate-form" action="/" method="GET">
+                        <form class="donate-form" action="/" method="POST">
                             <div>
                                 <label for="donate-first-name">First Name</label>
                                 <input type="text" id="donate-first-name" name="donate-first-name">
@@ -56,7 +56,7 @@
                     <div class="payment-info">
                         <h4 class="content-name">Payment Information</h4>
 
-                        <form class="donate-form" action="/" method="GET">
+                        <form class="donate-form" action="/" method="POST">
                             <div>
                                 <label for="credit-card">Credit Card Number</label>
                                 <input type="tel" id="credit-card" name="credit-card" placeholder="0000 0000 0000 0000" > 
